added app script

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <HTML>
-<H1><a href="../client/index.html">
-Kittyface.io
-</a></H1>
+<H1>Kittyface.io</H1>
 
 </HTML>
+<script src="../app.js></script>
